Complete Lab 5
